# ai_training_model

./: .gitignore  configurar o DeepSeek.txt  requirements.txt
deepseek/: free_models.txt
deepseek/Chapter03/: eg1.py  eg2.py  eg3.py  eg3_results.jsonl  eg4.py  eg4_results.jsonl  eg5.py  eg6.py  eg7.py  instrutor-sample.py  test.py  test_json.py
deepseek/Chapter05/: .envrc  01-initial-prototype.ipynb  02-api.Dockerfile  02-api.py  03-litellm.py  04-cpu-inference.py  05-api-cpu-xgrammar.Dockerfile  05-api-cpu-xgrammar.py  06-ollama.py  07-api-deepseek-sagemaker.Dockerfile  07-api-deepseek-sagemaker.py  07-aws-deployment.ipynb  README.md  daily_summary_prompt.pkl  pyproject.toml  teste_local_llm.py  utils.py
deepseek/Chapter06/: 01-evaluator-optimizer.ipynb  02-orchestrator-worker.ipynb  03-tool-calling-agent.ipynb  mcp_client.py  mcp_server.py  pyproject.toml  server_dp.py  teste_server.py
deepseek/Garmin/: api.py  aws_deploy.py  garmin_utils.py  llm_service.py  models.py
loto/ms/: analise.txt  deepseek_analysis.py  generate_numbers.py  generate_numbers_RF.py  openrouter_ai_ms.py  openrouter_ai_ms_padroes.py
