[project]
name = "chapter05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.uv]
default-groups = ["base", "api", "local", "cloud"]

[dependency-groups]
base = [
  "garminconnect>=0.2.28",
  "garth>=0.5.17",
  "hf-transfer>=0.1.9",
  "ipykernel>=6.30.1",
  "jupyter-black>=0.4.0",
  "litellm>=1.75.5.post1",
  "loguru>=0.7.3",
  "numpy>=2.3.2",
  "openai>=1.99.6",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
]
api = ["fastapi[standard]>=0.116.1"]
local = [
  "torch>=2.8.0",
  "transformers>=4.55.2",
  "xgrammar>=0.1.22",
  "accelerate>=1.10.0",
  "ollama>=0.5.3",
]
cloud = [
    "boto3>=1.40.15",
    "protobuf==3.20.*",
    "sagemaker>=2.75.1",
]
