[project]
name = "chapter-6-agents-with-deepseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "duckduckgo-search>=8.0.4",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jupyter-black>=0.4.0",
    "markdownify>=1.1.0",
    "markitdown[pdf]>=0.1.2",
    "openai>=1.88.0",
    "requests>=2.32.4",
]
